deploy/poc/deployment-scs.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scs-kafka-reactive
  namespace: poc
  labels:
    app: scs-kafka-reactive
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scs-kafka-reactive
  template:
    metadata:
      labels:
        app: scs-kafka-reactive
    spec:
      serviceAccountName: poc-user
#      volumes:
#        - name: secrets
#          secret:
#            secretName: secrets
#        - name: settings
#          configMap:
#            name: settings
      containers:
        - name: scs-kafka-reactive
          image: ghcr.io/tamamico/poc-scs-native:0.1.0-SNAPSHOT
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "1G"
              cpu: "500m"
              ephemeral-storage: "512M"
            limits:
              memory: "4G"
              cpu: "1"
              ephemeral-storage: "1G"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
          ports:
            - containerPort: 8080
#          volumeMounts:
#            - name: secrets
#              readOnly: true
#              mountPath: /etc/secrets/poc
#            - name: settings
#              readOnly: true
#              mountPath: /etc/config/poc
