deploy/poc/deployment-webflux.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poc-webflux-native
  namespace: poc
  labels:
    app: poc-webflux-native
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poc-webflux-native
  template:
    metadata:
      labels:
        app: poc-webflux-native
    spec:
      serviceAccountName: poc-user
      volumes:
        - name: secrets
          secret:
            secretName: secrets
      containers:
        - name: poc-webflux-native
          image: ghcr.io/tamamico/poc-webflux-native:0.0.1-snapshot
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "1G"
              cpu: "500m"
              ephemeral-storage: "512M"
            limits:
              memory: "4G"
              cpu: "1"
              ephemeral-storage: "1G"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: secrets
              readOnly: true
              mountPath: /etc/secrets/poc
---
apiVersion: v1
kind: Service
metadata:
  name: webflux-service
  namespace: poc
spec:
  selector:
    app: poc-webflux-native
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webflux-ingress
  namespace: poc
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webflux-service
                port:
                  number: 8080
